--- a/www/style.css
+++ b/www/style.css
@@ -30,7 +30,7 @@ p{
   width: 10%;
 }
 body{
-  background-image: url("img/earch.gif");
+  background-image: url("img/earth.gif");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
