--- a/www/styles.css
+++ b/www/styles.css
@@ -87,9 +87,9 @@ html, body {
   margin-right: 32px;
 }
 
-.demo-content {
+/* .demo-content {
   max-width: 1080px;
-}
+} */
 
 .demo-charts {
   -webkit-align-items: center;
