fix welding background and icons

--- a/www/style.css
+++ b/www/style.css
@@ -33,7 +33,7 @@ p{
   width: 10%;
 }
 body{
-  background-image: url("img/earth.gif");
+  background-image: url("img/welding.gif");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
